--- a/src/pages/flickr.html
+++ b/src/pages/flickr.html
@@ -3,13 +3,13 @@
  <section>
     <form role="form">
       <div class="form-group">
-            <div class="bs-example">
-            <label>Tags</label>
-            <select><option repeat.for="tag of tags" value.bind="tag"/>${tag}</select> 
-          </div>
-      <button click.trigger="fetchData()" class="btn btn-default">Submit</button>
-       <input data-role="tagsinput" type="text" value.bind="tags"/>
-       <button click.trigger="addTag()" class="btn btn-default">Add Tag</button>
+        <div class="bs-example">
+          <label>Tags selection: </label>
+          <select ><option repeat.for="tag of tags" value.bind="tag"/>${tag}</select> 
+          <button click.trigger="fetchData()" class="btn btn-default">Submit</button>
+          <label>Array binded to input field: </label>
+          <input data-role="tagsinput" type="text" value.bind="tags"/>
+        </div>
       </div>
     </form>
   </section>
